# simplepdfparserwithocr

./: .gitignore  LICENSE  README.md  pdf_parser.py  pyproject.toml  requirements.txt
pdfparser/: __init__.py  cli.py  parser.py
scripts/: run_tests.sh
tests/: test_parser.py
